--- a/vue/09-v-model 使用/01-v-model 的基本使用.html
+++ b/vue/09-v-model 使用/01-v-model 的基本使用.html
@@ -22,7 +22,7 @@
 
 
         <!-- 双向绑定的原理解析 -->
-        <!-- input 有一个input 事件，当输入框发生变化是触发 -->
+        <!-- input 有一个input 事件，当输入框发生变化时触发 -->
         <input type="text" :value="message" @input="changeValue">
         <h2>{{message}}</h2>
 
