--- a/vue/10-组件化/10-组件通信（子组件向父组件传递数据）.html
+++ b/vue/10-组件化/10-组件通信（子组件向父组件传递数据）.html
@@ -9,12 +9,13 @@
 </head>
 
 <body>
+    <!-- 子组件通过自定义事件向父组件传递数据 -->
     <div id="app">
         <h2>当前计数：{{counter}}</h2>
-        <!-- 在父组件中使用子组件时可以使用自定义事件，当子组件中事件触发时，会触发对应的父组件中的自定义组件 -->
-        <!-- 自定义事件格式：@子组件中 $emit 方法的第一个参数="父组件对应的事件处理函数" -->
+        <!-- 在父组件中可以使用子组件发出的自定义事件，当子组件中事件触发时，会触发对应的父组件中的自定义事件 -->
+        <!-- 自定义事件使用格式：@子组件中 $emit 方法的第一个参数="父组件对应的事件处理函数" -->
 
-        <!-- 父组件使用时间处理函数时可以不带括号，浏览器默认将子组件的 $emit 方法的第二个以及后面的参数传递过来 -->
+        <!-- 父组件使用自定义事件处理函数时可以不带括号，浏览器默认将子组件的 $emit 方法的第二个以及后面的参数传递过来 -->
         <!-- 这样就实现了子组件数据向父组件的传递 -->
         <my-cpn @increment="getCounter" @decrement="getCounter"></my-cpn>
     </div>
@@ -39,6 +40,7 @@
             methods: {
                 increment() {
                     this.cpnCounter++
+
                     // 当子组件中的事件触发时，把自定义事件发射出去，并把子组件的数据传递出去
                     // $emit 方法的第一个参数是发送给父组件的自定义事件名
                     // $emit 方法的第二个及以后的参数将作为实参传递给父组件的事件处理函数
