--- a/vue/13-webpack 的使用/04-webpack 加载Vue/index.html
+++ b/vue/13-webpack 的使用/04-webpack 加载Vue/index.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    <!-- 实际开发中，这里只有一个div 标签 -->
+    <!-- 因为如果我们希望将vue 实例data 中的数据显示在页面，就必须修改index.html 文件 -->
+    <!-- 如果我们后面自定义了组件，也必须修改index.html 文件来使用组件 -->
+    <!-- 但是html 模板在之后的开发中，我们并不希望频繁的手动修改index.html 文件-->
+    <div id="app"></div>
+
+
     <!-- 引用的是打包后的bundles.js 文件 -->
 
     <!-- 因为bundles.js 文件中整合了main.js 以及和它直接或间接相关的其他模块，而且已经转换成浏览器可以识别的版本 -->
